# cernova

./: .gitignore  CLAUDE.md  JAYDEN_CHANGES.md  README.md  devpost_ethics.md  package-lock.json  package.json  requirements.txt
.cursor/: hooks.json
.cursor/plans/: homepage_nn_g_rewire_b3c4534d.plan.md
.github/workflows/: ci.yml
backend/: .coverage  README.md  RUNS_ENDPOINT.md  auth.py  config.py  conftest.py  db.py  logging_config.py  main.py  otel_smoke_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed_calls.py
backend/adapters/: __init__.py  cernova.py  langfuse.py  langsmith.py  otel.py
backend/anomaly/: README.md  __init__.py  condition_registry.py  config.py  conftest.py  evaluator.py  prompt_kernel.py  scalars.py  schemas.py  shape_classifier.py
backend/documentation/: BEHAVIORAL_L3.md  CONTRACT_SYSTEM.md
backend/migrations/: add_anomaly_evidence.sql  add_behavior_vectors.sql  add_incidents.sql  (+8 more)
documentation/: CERNOVA_BRIEF.md  TOTEM.md  behavioral_embedding_model.md
frontend/: README.md
mcp/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
python-sdk/: README.md  pyproject.toml  smoke_test.py
sample-app/: README.md  callsite-live.mjs  chatbot.ts  demo.ts  package-lock.json  package.json  seed.ts
sdk/: README.md  e2e-test.mjs  package.json  pyproject.toml  smoke-test.mjs
sdk/src/: callsite.ts  index.ts  run.ts  tracer.ts  types.ts  uuid.ts
sdk/src/wrappers/: anthropic.ts  openai.ts
sdk/trace_sdk/: __init__.py  client.py  context_limits.py  emitter.py  models.py  pricing.py  providers.py
(+109 files in other folders)
