[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-sdk"
version = "0.1.0"
description = "LLM tracing SDK — wraps Claude (Anthropic) calls and logs traces to FastAPI /ingest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28",
  "anthropic>=0.40",
  "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trace_sdk*"]
